--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="cards">
-      <ul class="cards__list">
+      <ul class="cards__list list">
         
         <li class="cards__item">
           <img class="cards__img" src="image/Karachaevsk.jpg" alt="">
