--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="main">
     <div class="profile">
-      <img class="profile__picture" src="image/profile_picture.jpg" alt="profile_picture">
+      <img class="profile__picture" src="image/profile_picture.jpg" alt="Фото профиля">
       <div class="profile__info">
         <h1 class="profile__title"> Жак-Ив Кусто</h1>
         <button class="button profile__edit"> </button>
