--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <footer> <p class="footer"> &copy; 2020 Mesto Russia </p></footer>
   
 <div class="popup">
-  <div class="popup_type_edit">
+  <div class="popup__edit">
       <button class="button popup__close" type="button"></button>
       <form class="popup__form" name="profile-edit">
         <fieldset class="popup__fieldset">
