--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="profile">
       <img class="profile__picture" src="image/profile_picture.jpg" alt="Фото профиля">
       <div class="profile__info">
-        <h1 class="profile__title"> Жак-Ив Кусто</h1>
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="button profile__edit" aria-label="edit profile" type="button"> </button>
         <p class="profile__description">Исследователь океана</p>
       </div>
@@ -87,7 +87,7 @@
   
 <div class="popup">
   <div class="popup__edit">
-      <button class="button popup__close" type="button"></button>
+      <button class="button button_type_close" type="button"></button> 
       <form class="popup__form" name="profile-edit">
         <fieldset class="popup__fieldset">
           <legend class="popup__header">Редактировать профиль</legend>
