popup add delet like img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </footer>
 
     <div class="popup popup__edit">
-      <div class="popup_container ">
+      <div class="popup__container ">
         <button class="button button_type_close" type="button"></button>
         <form class="popup__form popup__form-edit" name="profile-edit">
           <fieldset class="popup__fieldset">
@@ -60,7 +60,7 @@
       </div>
 
       <div class="popup popup__add-place">
-        <div class="popup_container ">
+        <div class="popup__container ">
         <button class="button button_type_close" type="button"></button>
         <form class="popup__form popup__form-addPlace" name="place-add">
           <fieldset class="popup__fieldset">
@@ -74,11 +74,11 @@
       </div>
 
       <div class="popup popup__open-img">
-        <div class="popup_container ">
+        <div class="popup__figure-container ">
         <button class="button button_type_close" type="button"></button>
         <figure class="popup__figure">
-          <img class="popup__img" src="" alt="Фото добавленной карточки">
-          <figcaption class="popup__description"> </figcaption>
+          <img class="popup__img" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/kholmogorsky-rayon.jpg" alt="Фото добавленной карточки">
+          <figcaption class="popup__description">Описание </figcaption>
       </figure>
           
       </div>
