--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         </figure>
       </div>
     </div>
-
-    <script src="scripts/script.js"> </script>
+  </div>
+  <script src="scripts/script.js"> </script>
 
 </body>
 
