--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <p class="footer"> &copy; 2020 Mesto Russia </p>
     </footer>
 
-    <div class="popup popup__edit">
+    <div class="popup popup_type_edit">
       <div class="popup__container ">
         <button class="button button_type_close" type="button"></button>
         <form class="popup__form popup__form-edit" name="profile-edit">
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="popup popup__add-place">
+    <div class="popup popup_type_add-place">
       <div class="popup__container ">
         <button class="button button_type_close" type="button"></button>
         <form class="popup__form popup__form-addPlace" name="place-add">
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <div class="popup popup__open-img">
+    <div class="popup popup_type_open-img">
       <div class="popup__figure-container ">
         <button class="button button_type_close" type="button"></button>
         <figure class="popup__figure">
