--- a/index.html
+++ b/index.html
@@ -28,16 +28,7 @@
 
     <div class="cards">
       <ul class="cards__list list">
-        <template id="cards__template">
-          <li class="cards__item">
-            <button class="button cards__trash" type="button"> </button>
-            <img class="cards__img" src=" " alt="Фото добавленной карточки">
-            <div class="cards__box">
-              <h2 class="cards__title"></h2>
-              <button class="button cards__like" type="button"> </button>
-            </div>
-          </li>
-        </template>
+       
       </ul>
     </div>
 
@@ -77,14 +68,24 @@
       <div class="popup__figure-container ">
         <button class="button button_type_close" type="button"></button>
         <figure class="popup__figure">
-          <img class="popup__img"
-            src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/kholmogorsky-rayon.jpg"
-            alt="Фото добавленной карточки">
+          <img class="popup__img" src="#" alt="">
           <figcaption class="popup__description">Описание </figcaption>
         </figure>
       </div>
     </div>
   </div>
+
+  <template id="cards__template">
+    <li class="cards__item">
+      <button class="button cards__trash" type="button"> </button>
+      <img class="cards__img" src="#" alt="">
+      <div class="cards__box">
+        <h2 class="cards__title"></h2>
+        <button class="button cards__like" type="button"> </button>
+      </div>
+    </li>
+  </template>
+  <script src="scripts/cards.js"> </script>
   <script src="scripts/script.js"> </script>
 
 </body>
