--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <legend class="popup__header">Редактировать профиль</legend>
             <label class="popup__label"> 
               <input class="popup__input" type="text" name="firstname" minlength="2" maxlength="40" required>
-              <span class="popup__input_type_error"></span>
+              <span class="popup__error"></span>
             </label>
             <label class="popup__label"> 
               <input class="popup__input" type="text" name="job" minlength="2" maxlength="200" required>
-              <span class="popup__input_type_error"> </span>
+              <span class="popup__error"> </span>
             </label>
           </fieldset>
           <button disabled class="button popup__save" type="submit">Сохранить</button>
@@ -64,11 +64,11 @@
             <legend class="popup__header">Новое место</legend>
             <label class="popup__label"> 
               <input class="popup__input" type="text" name="place" placeholder="Название" minlength="2" maxlength="30" required>
-              <span class="popup__input_type_error"> </span>
+              <span class="popup__error"> </span>
             </label>
             <label class="popup__label"> 
               <input class="popup__input" type="url" name="link" placeholder="Ссылка на картинку" required>
-              <span class="popup__input_type_error"> </span>
+              <span class="popup__error"> </span>
             </label>
           </fieldset>
           <button disabled class="button popup__save popup__save_type_error" type="submit">Сохранить</button>
