--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
       </div>
     </li>
   </template>
-  <script src="scripts/cards.js"> </script>
-  <script src="scripts/validate.js"></script>
-  <script src="scripts/script.js"> </script>
+  <script type="module" src="scripts/cards.js"> </script>
+  <script type="module" src="scripts/card.js"></script>
+  <script type="module" src="scripts/formValidator.js"></script>
+  <script type="module" src="scripts/script.js"> </script>
 
 </body>
 
