--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     </li>
   </template>
   <script type="module" src="scripts/cards.js"> </script>
-  <script type="module" src="scripts/card.js"></script>
-  <script type="module" src="scripts/formValidator.js"></script>
+  <script type="module" src="scripts/Card.js"></script>
+  <script type="module" src="scripts/FormValidator.js"></script>
   <script type="module" src="scripts/script.js"> </script>
 
 </body>
