--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <span class="popup__error"> </span>
             </label>
           </fieldset>
-          <button disabled class="button popup__save" type="submit">Сохранить</button>
+          <button class="button popup__save" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
@@ -101,6 +101,9 @@
   <script type="module" src="scripts/Card.js"></script>
   <script type="module" src="scripts/FormValidator.js"></script>
   <script type="module" src="scripts/script.js"> </script>
+  <script type="module" src="scripts/Section.js"></script>
+  <script type="module" src="scripts/Popup.js"></script>
+  <script type="module" src="scripts/PopupWithImage.js"></script>
 
 </body>
 
