--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./pages/index.css" />
+
   <title>Mesto</title>
 </head>
 
@@ -17,7 +17,7 @@
 
   <div class="main">
     <div class="profile">
-      <img class="profile__picture" src="image/profile_picture.jpg" alt="Фото профиля">
+      <img class="profile__picture"  src="<%=require('./image/profile_picture.jpg')%>" alt="Фото профиля">
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="button profile__edit" aria-label="edit profile" type="button"> </button>
@@ -97,13 +97,13 @@
       </div>
     </li>
   </template>
-  <script type="module" src="scripts/cards.js"> </script>
+  <!-- <script type="module" src="scripts/cards.js"> </script>
   <script type="module" src="scripts/Card.js"></script>
   <script type="module" src="scripts/FormValidator.js"></script>
   <script type="module" src="scripts/script.js"> </script>
   <script type="module" src="scripts/Section.js"></script>
   <script type="module" src="scripts/Popup.js"></script>
-  <script type="module" src="scripts/PopupWithImage.js"></script>
+  <script type="module" src="scripts/PopupWithImage.js"></script> -->
 
 </body>
 
