--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
 
   <div class="main">
     <div class="profile">
-      <img class="profile__picture"  src="<%=require('./image/profile_picture.jpg')%>" alt="Фото профиля">
+      <button class="button profile__edit-picture" type="button" title="Изменить аватар">
+        <img class="profile__picture"  src="<%=require('./image/profile_picture.jpg')%>" alt="Фото профиля">
+      </button>
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="button profile__edit" aria-label="edit profile" type="button"> </button>
@@ -85,6 +87,34 @@
         </figure>
       </div>
     </div>
+
+    <div class="popup popup_type_edit-avatar">
+      <div class="popup__container ">
+        <button class="button button_type_close" type="button"></button>
+          <fieldset class="popup__fieldset">
+            <legend class="popup__header">Обновить аватар</legend>
+            <label class="popup__label"> 
+              <input class="popup__input" type="url" name="link" placeholder="Ссылка на картинку" required>
+              <span class="popup__error"> </span>
+            </label>
+          </fieldset>
+          <button disabled class="button popup__save popup__save_type_error" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_type_confirm">
+      <div class="popup__container ">
+        <button class="button button_type_close" type="button"></button>
+        <form class="popup__form" name="">
+          <fieldset class="popup__fieldset">
+            <legend class="popup__header">Вы уверены?</legend>
+          </fieldset>
+          <button class="button popup__save" type="submit">Да</button>
+        </form>
+      </div>
+    </div>
+
   </div>
 
   <template id="cards__template">
@@ -93,7 +123,10 @@
       <img class="cards__img" src="#" alt="">
       <div class="cards__box">
         <h2 class="cards__title"></h2>
-        <button class="button cards__like" type="button"> </button>
+        <div class="cards__box-like">
+          <button class="button cards__like" type="button"> </button>
+          <span class="cards__like-count"> 1 </span>
+        </div>
       </div>
     </li>
   </template>
